# computational-chemistry-tools

./: .gitignore  GaussianTools.py  LICENSE  ShermoTools.py  freq.sh  opt_energy.sh  pyproject.toml  simple_batch.sh  thermochemistryScaler.csv
cc_tools/: config.py  gaussian-tools.py  gaussian_tools.py  pre_optimize.py  utils.py
src/cc_tools/: config.py  gaussian_tools.py
tests/: logs2gjfs.py  opt_and_energy_cal.py  opt_energy.sh  simple_batch.sh  smiles_for_optimizations.py  smiles_for_optimizzations.py
