[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc_tools"
version = "0.1.0"
description = "A simple example Python package"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools]
packages = ["cc_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
