[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc_tools"
version = "0.1.0"
description = "A simple example Python package"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "cclib>=1.8.1",
    "rdkit>=2024.09.1",
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
